# rzv2l_smarc_sample_code

./: LICENSE  README.md
mipicam_hdmi_hrnet_drp-ai/: README.md
mipicam_hdmi_hrnet_drp-ai/src/: Makefile  camera.cpp  camera.h  define.h  image.cpp  image.h  sample_app_hrnet_cam.cpp  wayland.cpp  wayland.h
mipicam_hdmi_yolov3_drp-ai/: README.md
mipicam_hdmi_yolov3_drp-ai/src/: ascii.h  (+12 more)
usbcam_http_drp-ai/: README.md
usbcam_http_drp-ai/src/: CMakeLists.txt  image_converter.cpp  image_converter.h  includes.h  main.cpp  recognize_proc.cpp  recognize_proc.h  ws_server.cpp  ws_server.h
usbcam_http_drp-ai/src/camera/: camera.cpp  camera.h  define.h
usbcam_http_drp-ai/src/command/: bbox_t.h  camera_image.h  change_model.h  classification.h  classify_t.h  command_base.h  command_create_helper.h  cpu_usage.h  object_detection.h  pose_detection.h  predict_notify_base.h
usbcam_http_drp-ai/src/drp/: define.h  drp_proc.cpp  drp_proc.h
usbcam_http_drp-ai/src/recognize/: irecognize_model.h  recognize_base.cpp  recognize_base.h  recognize_data.h
usbcam_http_drp-ai/src/recognize/common/: box.cpp  box.h  functions.h  pos.h  recognize_define.h  yolo_common.h
usbcam_http_drp-ai/src/recognize/hrnet/: hrnet_model.cpp  hrnet_model.h
usbcam_http_drp-ai/src/recognize/resnet/: resnet_model.cpp  resnet_model.h
usbcam_http_drp-ai/src/recognize/tinyyolov2/: tinyyolov2_model.cpp  tinyyolov2_model.h
usbcam_http_drp-ai/src/recognize/yolov3/: yolov3_model.cpp  yolov3_model.h
usbcam_http_drp-ai/src/util/: measure_time.h  string_formatter.h  system_analyzer.cpp  system_analyzer.h
(+6 files in other folders)
